# pulse-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-27-http-docker.md
docs/superpowers/specs/: 2026-03-27-http-docker-design.md
src/pulse_mcp/: __init__.py  client.py  server.py
tests/: test_http_transport.py
