[project]
name = "pulse-mcp"
version = "1.0.0"
description = "MCP server for Pulse monitoring dashboard"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
pulse-mcp = "pulse_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_mcp"]
